Fix chat overflow

--- a/public/css/room.scss
+++ b/public/css/room.scss
@@ -12,6 +12,9 @@ body {
   width: 80%;
   max-width: 1200px;
   font-size: 4rem;
+  max-height: 80vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .fromElse {
